[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
base64 = "0.13.0" # base64 编码/解码
bytes = "1" # 处理字节流
image = "0.24.6" # 处理图片
lazy_static = "1" # 通过宏更方便地初始化静态变量
lru = "0.10.0" # LRU 缓存
percent-encoding = "2" # url 编码/解码
photon-rs = "0.3" # 图片效果
prost = "0.11.9" # protobuf 处理
reqwest = { version = "^0.11", features = ["socks", "rustls-tls"], default-features = false } # HTTP cliebnt
serde = { version = "1", features = ["derive"] } # 序列化/反序列化数据
tokio = { version = "1", features = ["full"] } # 异步处理
tracing = "0.1" # 日志和追踪
tracing-subscriber = "0.3.16" # 日志和追踪
derive_more = "0.99.17"
serde_json = "1.0.96"
axum = { version = "0.6.16", features = ["tokio"] }
tower = "0.4.13"
futures = "0.3.28"

[build-dependencies]
prost-build = "0.11.9" # 编译 protobuf

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-gnu-gcc"
rustflags = [ "-C", "target-feature=+crt-static", "-C", "link-arg=-lgcc" ]
